--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,11 @@
     <artifactId>h2</artifactId>
     <scope>runtime</scope>
 </dependency>
+<dependency>
+    <groupId>org.seleniumhq.selenium</groupId>
+    <artifactId>selenium-java</artifactId>
+    <version>3.141.59</version> <!-- Use the latest version -->
+</dependency>
 	</dependencies>
 
 	<build>
